--- a/static/css/pos.css
+++ b/static/css/pos.css
@@ -1169,7 +1169,7 @@ header .btn.icon {
     width: 100px; }
 
 .animated .dialog__mask {
-  transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out, z-index 0.3s step-end;
   display: block;
   z-index: -1 !important; }
 
@@ -1182,7 +1182,8 @@ header .btn.icon {
   transform: translate(110%, 0); }
 
 .animated .dialog-open + .dialog__mask {
-  z-index: 1 !important; }
+  z-index: 1 !important;
+  transition: opacity 0.2s ease-in, z-index 0s; }
 
 .animated .dialog-open .dialog__content {
   transform: translate(0, 200px); }
